:construction: Added validations to first register page

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,9 @@
         android:theme="@style/Theme.Estudia"
         tools:targetApi="31">
         <activity
+            android:name=".CustomRegister"
+            android:exported="false" />
+        <activity
             android:name=".BaseTemplate"
             android:exported="false" />
         <activity
