:construction: Refactor Components WelcomeIntroSlides

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,7 @@
             android:name=".Confirm"
             android:exported="false" />
         <activity
-            android:name=".CustomRegister"
+            android:name=".WelcomeIntroSlides"
             android:exported="false" />
         <activity
             android:name=".BaseTemplate"
