--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,14 @@
         android:theme="@style/Theme.Estudia"
         tools:targetApi="31">
         <activity
+            android:name=".CustomerFragments"
+            android:exported="false"
+            android:label="@string/title_activity_customer_fragments"
+            android:theme="@style/Theme.Estudia.NoActionBar" />
+        <activity
+            android:name=".CustomerRegisterSlides"
+            android:exported="false" />
+        <activity
             android:name=".Confirm"
             android:exported="false" />
         <activity
