--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,11 @@
         android:theme="@style/Theme.Estudia"
         tools:targetApi="31">
         <activity
+            android:name=".CustomerRegisterContainer"
+            android:exported="false"
+            android:label="@string/title_activity_customer_register_container"
+            android:theme="@style/Theme.Estudia.NoActionBar" />
+        <activity
             android:name=".CustomerFragments"
             android:exported="false"
             android:label="@string/title_activity_customer_fragments"
