--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,9 @@
         android:theme="@style/Theme.Estudia"
         tools:targetApi="31">
         <activity
+            android:name=".activities.IntroPersonalities"
+            android:exported="false" />
+        <activity
             android:name=".activities.CustomerRegisterContainer"
             android:exported="false"
             android:label="@string/title_activity_customer_register_container"
@@ -26,7 +29,7 @@
             android:exported="false" />
         <activity
             android:name=".activities.Personality"
-            android:exported="false"/>
+            android:exported="false" />
         <activity
             android:name=".activities.PersonalitySurvey"
             android:exported="false" />
