--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,9 @@
         android:theme="@style/Theme.Estudia"
         tools:targetApi="31">
         <activity
+            android:name=".activities.StudyProgramActivity"
+            android:exported="false" />
+        <activity
             android:name=".activities.IntroPersonalities"
             android:exported="false" />
         <activity
